fix some z-index with add & edit popup

--- a/app/assets/stylesheets/jquery_ui_overrides.css.scss
+++ b/app/assets/stylesheets/jquery_ui_overrides.css.scss
@@ -25,9 +25,14 @@
 
 .ui-dialog {
   overflow: visible;
+  z-index: 2;
   .ui-dialog-content {
     overflow: visible;
   }
+}
+
+.ui-widget-overlay {
+  z-index: 1;
 }
 
 .ui-dialog {
